# til24-nlp

./: .dockerignore  .gitignore  Dockerfile  Dockerfile.precompiled  Dockerfile.source  Dockerfile.whl-build  README.md  TODO.md  data.ipynb  dev.py  pyproject.toml
.devcontainer/: devcontainer.json
.devcontainer/hooks/: postCreate.sh  setupGCS.sh
eval/: nlp_eval.py  test_nlp.py
scripts/: build_source.sh
til24_nlp/: NLPManager.py  __init__.py  app.py  cheese.py  colorcorrection.py  colors.txt  defaults.py  exl2.py  hacks.py  log.py  nlp.py  prompt.py  structs.py  utils.py  values.py
til24_nlp/models/: __init__.py  granite.py  llama3.py  phi3.py
