[tool.poetry]
name = "til24-nlp"
version = "0.1.0"
description = "template for python api server"
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "<3.12,>=3.10"
python-dotenv = "^1.0.1"
fastapi-slim = "^0.111.0"
uvicorn = "^0.29.0"
uvloop = "^0.19.0"
httptools = "^0.6.1"
tokenizers = "^0.19.1"
lm-format-enforcer = "^0.10.1"
word2number = "^1.1"

[tool.poetry.group.dev.dependencies]
ruff = "*"
poethepoet = "*"
rich = "^13.7.1"
ipykernel = "^6.29.4"
rouge-score = "^0.1.2"
pandas = "^2.2.2"
requests = "^2.31.0"
torch = "^2.3.0"
exllamav2 = [
  { url = "https://github.com/turboderp/exllamav2/releases/download/v0.1.1/exllamav2-0.1.1+cu121.torch2.3.0-cp311-cp311-linux_x86_64.whl", python = "3.11.*" },
  { url = "https://github.com/turboderp/exllamav2/releases/download/v0.1.1/exllamav2-0.1.1+cu121.torch2.3.0-cp310-cp310-linux_x86_64.whl", python = "3.10.*" },
]

[tool.poetry.group.flash]
optional = true

[tool.poetry.group.flash.dependencies]
# flash-attn will be supported on final machine (RTX 4070), but not on eval machine (T4).
flash-attn = [
  { url = "https://github.com/Dao-AILab/flash-attention/releases/download/v2.5.9.post1/flash_attn-2.5.9.post1+cu122torch2.3cxx11abiFALSE-cp311-cp311-linux_x86_64.whl", python = "3.11.*" },
  { url = "https://github.com/Dao-AILab/flash-attention/releases/download/v2.5.9.post1/flash_attn-2.5.9.post1+cu122torch2.3cxx11abiFALSE-cp310-cp310-linux_x86_64.whl", python = "3.10.*" },
]

[tool.poe.tasks]
# use_exec for some tasks to avoid hangs on SIGINT.
dev = { cmd = "python dev.py", use_exec = true }
prod = { cmd = "docker run --rm --gpus all -it -p 5002:5002 nyanplan3-nlp:latest", use_exec = true }
test = "python eval/test_nlp.py"
publish = "docker push asia-southeast1-docker.pkg.dev/dsta-angelhack/repository-nyanplan3/nyanplan3-nlp:finals"
requirements = "poetry export -o requirements.txt --without-hashes"

[tool.poe.tasks.build]
cmd = """docker build -f Dockerfile . \
  -t nyanplan3-nlp:latest \
  -t asia-southeast1-docker.pkg.dev/dsta-angelhack/repository-nyanplan3/nyanplan3-nlp:latest \
  -t asia-southeast1-docker.pkg.dev/dsta-angelhack/repository-nyanplan3/nyanplan3-nlp:finals \
  -t nyanplan3-nlp:${tag} \
  -t asia-southeast1-docker.pkg.dev/dsta-angelhack/repository-nyanplan3/nyanplan3-nlp:${tag} \
"""
deps = ["requirements"]
args = [{ name = "tag", positional = true, required = true }]

[tool.ruff.lint]
select = ["D"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
